# ffmpeg-rtmp

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ACADEMIC_REFRAMING_2026-01-07.md  AUDIT_COMPLETE.md  BANDWIDTH_ANALYSIS.md  BANDWIDTH_METRICS_COMPLETE.md  BANDWIDTH_METRICS_FIXED.md  BANDWIDTH_METRICS_FIXED_SUMMARY.md  CHANGELOG.md  CHANGES.md  CI_FIX_SUMMARY.md  CI_STATUS_VERIFIED.md  CODE_VERIFICATION_REPORT.md  COMPLETE_TESTING_REPORT.md  COMPREHENSIVE_TEST_RESULTS.md  CONCURRENT_JOBS_IMPLEMENTATION.md  CONTRIBUTING.md  COST_DASHBOARD_FIX.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_TROUBLESHOOTING.md  DEPLOY_QUICKREF.md  DISTRIBUTED_DEMO.md  DYNAMIC_PRICING.md  Dockerfile.cost-exporter  Dockerfile.master  Dockerfile.qoe-exporter  ENTERPRISE_GAP_SUMMARY.md  ENTERPRISE_READINESS.md  EXPORTER_INTEGRATION.md  FINAL_IMPLEMENTATION_STATUS.md  GO_EXPORTERS_SUMMARY.md  GRAFANA_FIX_SUMMARY.md  GRAFANA_FIX_TESTING.md  (+93 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
advisor/: __init__.py  cost.py  modeling.py  recommender.py  regional_pricing.py  scoring.py
ansible/: ANSIBLE_GUIDE.md  README.md  ansible.cfg  create_ansible_structure.sh
certs/: agent.crt  agent.key  master.crt  master.key
deployment/: QUICKFIX.md  README.md  WATCH_DEPLOYMENT.md  WORKER_DEPLOYMENT.md  deployment-wizard.sh  ffmpeg-agent.service  ffmpeg-master.service  fix-edge-install.sh  generate-certs.sh  install-edge.sh  simulate-deployment.sh  test-deployment-scripts.sh  validate-and-rollback.sh  validate-watch.sh
docker-stats-exporter/: docker_stats_exporter.py
docs/: ALERTING.md  API.md  ARCHITECTURE.md  AUTO_ATTACH.md  AUTO_DISCOVERY_ENHANCEMENTS.md  AUTO_DISCOVERY_PHASE1_RESULTS.md  AUTO_DISCOVERY_PHASE2_SUMMARY.md  AUTO_DISCOVERY_PHASE3_COMPLETE.md  (+80 more)
(+516 files in other folders)
