[project]
name = "ffmpeg-rtmp-power-monitoring"
version = "0.1.0"
description = "Comprehensive streaming test and power monitoring stack for analyzing energy consumption during video transcoding"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pau Santana"},
]
keywords = ["ffmpeg", "rtmp", "power-monitoring", "energy-efficiency", "prometheus", "grafana"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/psantana5/ffmpeg-rtmp"
Documentation = "https://github.com/psantana5/ffmpeg-rtmp/tree/main/docs"
Repository = "https://github.com/psantana5/ffmpeg-rtmp"
Issues = "https://github.com/psantana5/ffmpeg-rtmp/issues"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["advisor", "scripts", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
